# PlaywrightPython

./: .env_sample  .gitignore  README.md  TODO.md  common_configuration.py  conftest.py  environment.py  pyproject.toml
.github/workflows/: ci_playwright.yml
config/: ebay_prod.yaml
features/: ebay_tests.feature
pages/: ebay_main_page.py  ebay_search_resulats_page.py  page.py
pages/locators/: ebay_main_page_locators.py  ebay_search_resulats_page_locators.py  generic_ebay_page.py  generic_ebay_page_locators.py
steps/: common_steps.py
tests/: test_ebay.py
utilities/: common.py  logger.py
