[project]
name = "playwright-package"
version = "0.1.0"
description = "A package using Playwright for browser automation."
authors = [
    {name = "Anatolii Dubovskyi", email = "anatolii.dubovskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-playwright",
    "playwright==1.49.1",
    "ruff",
    "behave",
    "coloredlogs",
    "python-dotenv",
    "PyYaml"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: Execute asynchronous tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"