[project]
name = "playwright-package"
version = "0.1.0"
description = "A package using Playwright for browser automation."
authors = [
    {name = "Anatolii Dubovskyi", email = "anatolii.dubovskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-playwright==0.6.2",
    "playwright==1.49.1",
    "ruff",
    "behave==1.2.6",
    "coloredlogs==15.0.1",
    "python-dotenv==1.0.1",
    "PyYaml==6.0.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: Execute asynchronous tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"