[project]
name = "playwright-package"
version = "0.1.0"
description = "A package using Playwright for browser automation."
authors = [
    {name = "Anatolii Dubovskyi", email = "anatolii.dubovskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-playwright==0.6.2",
    "playwright==1.49.1",
    "ruff",
    "behave==1.2.6",
    "coloredlogs==15.0.1",
    "python-dotenv==1.0.1",
    "PyYaml==6.0.2"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "regression: Mark test as regreression test",
    "smoke: Mark test as smoke test"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"